# test_assigment_byuro_1440

./: .gitignore  README.md  pyproject.toml  tz.docx
src/: main.py
src/app/: base.py  logger.py
src/config/: __init__.py
src/dependecies/: driver.py
src/dto/: base.py
src/models/: driver.py
src/routers/: __init__.py  driver.py  service.py
src/schemas/: base.py  driver.py
src/services/: driver.py
tests/: conftest.py  test_api.py  test_telemetry.py
