[tool.poetry]
name = "assignment-byuro-1440"
version = "0.1.0"
description = "test zadanie"
authors = ["yi.prokopchuk"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
colorlog = "^6.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
